; ModuleID = '/home/carl/AnghaBench/Cinder/src/freetype/pfr/extr_pfrsbit.c_pfr_load_bitmap_bits.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/freetype/pfr/extr_pfrsbit.c_pfr_load_bitmap_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@FT_Err_Ok = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, %struct.TYPE_4__*)* @pfr_load_bitmap_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pfr_load_bitmap_bits(i32* %0, i32* %1, i32 %2, i32 %3, %struct.TYPE_4__* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.TYPE_4__* %4, %struct.TYPE_4__** %10, align 8
  %13 = load i32, i32* @FT_Err_Ok, align 4
  store i32 %13, i32* %11, align 4
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp sgt i64 %16, 0
  br i1 %17, label %18, label %42

18:                                               ; preds = %5
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp sgt i64 %21, 0
  br i1 %22, label %23, label %42

23:                                               ; preds = %18
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %25 = load i32, i32* %9, align 4
  %26 = call i32 @pfr_bitwriter_init(i32* %12, %struct.TYPE_4__* %24, i32 %25)
  %27 = load i32, i32* %8, align 4
  switch i32 %27, label %40 [
    i32 0, label %28
    i32 1, label %32
    i32 2, label %36
  ]

28:                                               ; preds = %23
  %29 = load i32*, i32** %6, align 8
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @pfr_bitwriter_decode_bytes(i32* %12, i32* %29, i32* %30)
  br label %41

32:                                               ; preds = %23
  %33 = load i32*, i32** %6, align 8
  %34 = load i32*, i32** %7, align 8
  %35 = call i32 @pfr_bitwriter_decode_rle1(i32* %12, i32* %33, i32* %34)
  br label %41

36:                                               ; preds = %23
  %37 = load i32*, i32** %6, align 8
  %38 = load i32*, i32** %7, align 8
  %39 = call i32 @pfr_bitwriter_decode_rle2(i32* %12, i32* %37, i32* %38)
  br label %41

40:                                               ; preds = %23
  br label %41

41:                                               ; preds = %40, %36, %32, %28
  br label %42

42:                                               ; preds = %41, %18, %5
  %43 = load i32, i32* %11, align 4
  ret i32 %43
}

declare dso_local i32 @pfr_bitwriter_init(i32*, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @pfr_bitwriter_decode_bytes(i32*, i32*, i32*) #1

declare dso_local i32 @pfr_bitwriter_decode_rle1(i32*, i32*, i32*) #1

declare dso_local i32 @pfr_bitwriter_decode_rle2(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
